[tool.poetry]
name = "async-poe-client"
version = "0.2.3"
description = "A stable, fast and convenient async client for poe.com"
authors = ["canxin <1969730106@qq.com>"]
readme = "README.md"
packages = [{ include = "async_poe_client" }]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.7.0"
aiohttp = "^3.8.5"
aiohttp-socks = "^0.8.0"
pyexecjs2 = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
